--- a/salong-miccis/prislista.html
+++ b/salong-miccis/prislista.html
@@ -11,12 +11,12 @@
 <body>
  <!----------------------------MENY------------------------------->
     <div class="tophead">
-        <a href="startsida.html">
+        <a href="index.html">
             <img src="bilder/logo.png"></a>
 
         <div class="nav">
             <ul>
-                <a href="startsida.html">
+                <a href="index.html">
                     <li>Hem</li>
                 </a>
                 <a href="prislista.html">
