--- a/salong-miccis/student.html
+++ b/salong-miccis/student.html
@@ -5,80 +5,51 @@
     <meta charset="utf-8">
     <title>Salong Miccis</title>
     <link rel="stylesheet" href="style.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
- <!----------------------------MENY------------------------------->
-     <div class="tophead">
-        <a href="startsida.html">
-            <img src="bilder/logo.png"></a>
+ <!----------------------------LOGO + MENY------------------------------->
+    <div class="tophead"><a href="index.html">
+        <img src="bilder/logo.png"></a>
 
-        <div class="nav">
-            <ul>
-                <a href="startida.html">
-                    <li>Hem</li>
-                </a>
-                <a href="prislista.html">
-                    <li>Prislista</li>
-                </a>
-                <a href="#">
-                    <li class="dropdown">Behandlingar
-                </a>
-                <ul class="dropdown-content">
-                    <a href="bröllop.html">
-                        <li>Bröllop</li>
-                    </a>
-                    <a href="student.html">
-                        <li>Student</li>
-                    </a>
-                    <a href="bal.html">
-                        <li>Bal</li>
-                    </a>
-                    <a href="workshop.html">
-                        <li>Workshop</li>
-                    </a>
-                    <a href="spraytan.html">
-                        <li>Spraytan</li>
-                    </a>
-                </ul>
-                </li>
-                <a href="om-miccis.html">
-                    <li>Om Miccis</li>
-                </a>
+        <div class="nav"> <ul>
+            <a href="index.html">
+                <li>Hem</li>
+            </a>
+            <a href="prislista.html">
+                <li>Prislista</li>
+            </a>
+            <a href="#">
+                <li class="dropdown">Behandlingar
+            </a>
+            <ul class="dropdown-content">
+               <a href="bröllop.html"><li>Bröllop</li></a>
+               <a href="student.html"><li>Student</li></a>
+                <a href="bal.html"><li>Bal</li></a>
+               <a href="workshop.html"> <li>Workshop</li></a>
+               <a href="spraytan.html"> <li>Spraytan</li></a>
+            </ul>
+            </li>
+            <a href="om-miccis.html">
+                <li>Om Miccis</li>
+            </a>
             </ul>
         </div>
     </div>
+  <!---------------------------STORBILD + TEXT------------------------------->
+    <div class="student">
 
-  <!----------------------------INFO OM MICCIS + BILD------------------------------->
-<div class="pagewrapper-miccis">  
-<div class="miccis">  
-<div class="miccis-txt">
-<h2>Micaela Hansen - Salong Miccis</h2>
-<p>Micaela har arbetat i branschen sedan 2007 med kända varumärken, fotografer och stylister. 
-Hon driver skönhetssalongen Miccis i Halmstad.</p>
-<p>Micaela frilansar över hela Sverige som professionell make up artist och stylist.
-Hennes dröm är att inspirera dig och att få upptäcka världen inom skönhet!
-</p>
-</div>
-<img src="bilder/mican.jpg" alt="Mican">
+        <div class="student-txt">
+            <h2>Student</h2>
 
-<!----------------------------FORMULÄR--------------------->
-<div class="form">
-<form action="kontakt">
-  <h3>Kontakta Salong Miccis</h3>
-    Namn:<br>
-    <input type="text" placeholder="Namn..."><br>
-    Efternamn:<br>
-    <input type="text" placeholder="Epost..." required><br>
-    Ditt meddelande:<br>
-    <textarea rows="10" cols="10" placeholder="Meddelande..."></textarea><br>
-    <input type="button" value="Skicka">
-</form>    
-</div>  
-</div>
-</div>
- <!----------------------------FOOTER------------------------------->
+            <p>Äntligen, nu börjar livet!<br>
+Har du gått balen kanske du redan har fixat fransar och naglar hos Miccis sedan innan, 
+annars är du hjärtligt välkommen att göra det hos Miccis. </p>
+<a href="prislista.html">Klicka för att se priser här!</a>
+        </div>
+        
+    </div>
+ <!---------------------------------FOOTER------------------------------------>
   <footer>  
   <!-- Boka tid -->
         <div class="boka-tid">
