--- a/salong-miccis/spraytan.html
+++ b/salong-miccis/spraytan.html
@@ -10,11 +10,11 @@
 
 <body>
  <!----------------------------MENY------------------------------->
-    <div class="tophead"><a href="startsida.html">
+    <div class="tophead"><a href="index.html">
         <img src="bilder/logo.png"></a>
 
         <div class="nav"> <ul>
-            <a href="startsida.html">
+            <a href="index.html">
                 <li>Hem</li>
             </a>
             <a href="prislista.html">
